# cerebellum-brain-tile-reconstructor

./: .gitignore  CLAUDE.md  README.md  analyze_zarr_metadata.py  convert_czi_to_ome_zarr_optimized.py  pyproject.toml
docs/: getting-started.md
scripts/: __init__.py  napari_roi_extractor.py  tile_browser.py  tile_metadata.py  tile_reconstructor.py  tile_selector.py  tile_stitcher.py
